tests/NormalTests/paczka1/small_fuzzy/87543202.err
Error in line 2: T0niKN4 A854 94,p
Error in line 4: aWD A401 49,4
Error in line 8: oEfa A854 79,2
Error in line 1: T0niKN4 A854 32,4
